# critical-dir

./: .dockerignore  .env.example  .gitignore  20260623__bench.md  Dockerfile  Dockerfile.api  Dockerfile.import  Makefile  README.md  api.py  check_db_conn.py  cluster_test.py  cmaps_data.py  cmaps_data_core.py  cmaps_util.py  criticaldir_core.py  docker-compose.yaml  example_for_webpage.py  get_json.sh  interactive_demo.py  my_util_files.py  nav.py  pyproject.toml  requirements.txt  schema.sql  schema_prepare.sh  test-cmds.md  test-cmds.py  test_cluster.py  test_nav.py  w.py
.github/workflows/: docker-compose.ci.yml  docker_ing.yaml  dockerhub.yaml  run_pytest.yaml  run_tests.yaml  t.yaml  testing.md
.github/workflows/testdata_pg/: 050-update-timestamps.sql  info.txt
criticaldir-redis-test/: docker-compose.yaml
doc/: 20260614__notes_subclusters.md  20260617__dbg.md  20260623__bench.md  20260718__dbg_notes.txt  apinotes.md  installation_downloader.md  optim.md  schema.sql
docker_api/: docker-compose.yaml
docker_import/: docker-compose.yaml
scripts/: demo_cluster_evo.py  demo_geopos.py  generate_sql_testdata.py  interactive_demo.py  stresstest.py  vergleich.py  work_better_plots.py
src/critical_dir/: api.py  api_util.py  cmaps_api.py  cmaps_api_import.py  cmaps_util.py  criticaldir_core.py  db_conn.py  exceptions.py  my_util_files.py  nav.py  settings.py  wip_subclusters.py
src/schema/: schema.sql.template  schema_generator.py
tests/: README.md  conftest.py  test_api_util.py  test_cluster.py  test_cmap_apireq.py  test_cmap_json.py  test_dbskeleton.py  test_ing_datamanip.py  test_nav.py
tests/docker/: README.md  docker-compose.ci-ingest.yml  docker-compose.ci-pytest.yml  docker-compose.ci.yml  test_api.py
tests/docker-ing/: README.md  commands.txt  test_demo.py  test_ing.py
tests/ing-test-jsons/: README.md  bad-invalid-lat.json  bad-invalid-lat.json.template  bad-invalid-lng.json  bad-invalid-lng.json.template  bad-missing-field1.json  bad-missing-field2.json  bad-missing-field3.json  bad-missing-field4.json  important.txt  ok1.json  ok1.json.template  substitute_tnow.sh
tests_docker/: README.md  docker-compose.ci.yml  run_test.sh  test_api.py  testing.md
tests_docker/testdata_pg/: 020-testdata.sql
(+4 files in other folders)
